Appointment Details Component

--- a/src/app/components/appointment-details/appointment-details.component.html
+++ b/src/app/components/appointment-details/appointment-details.component.html
@@ -1,171 +1,186 @@
-<div class="background py-5">
-    <div class="container">
 
-        <h2 class="title mb-3">My appointments</h2>
+<div class="container">
 
-        <div>
-            <ul class="nav nav-pills nav-justified mb-3">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" [class.active]="displayMode == 'upcoming'" (click)="displayMode = 'upcoming'">Upcoming</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" [class.active]="displayMode == 'done'" (click)="displayMode = 'done'">Done</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" [class.active]="displayMode == 'cancelled'" (click)="displayMode = 'cancelled'">Cancelled</a>
-                </li>
-            </ul>
-        </div>
+  <h2 class="title mb-3">My appointments</h2>
 
-        <div *ngIf="displayMode == 'upcoming'">
-            <div class="appointment-item p-3 mb-3" *ngFor="let d of data.upcoming">
-                <div class="row">
-                    <div class="col-12 col-md-7 row">
-                        <div class="col-3">
-                            <img src="{{d.thumbnail}}" />
-                        </div>
-                        <div class="col-lg-9">
-                            <h4 class="border-bottom pb-2">{{d.name}}</h4>
-                            <div class="pb-2">
-                                {{d.description}}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-5">
-                        <div class="row border-bottom pb-2 mb-2">
-                            <b><i class="fa-regular fa-calendar "></i> EXAMINATION SCHEDULES</b>
-                            <div>{{d.date}}</div>
-                        </div>
-                        <div class="row border-bottom pb-2 mb-2">
-                            <b>ADDRESS OF EXAMINATION</b>
-                            <b>{{d.facility}}</b>
-                            <div>{{d.address}}</div>
-                        </div>
-                        <div class="row mb-2">
-                            <b>EXAMINATION PRICE</b>
-                            <div>{{d.price}}</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center align-items-center border-top pt-3">
-                    <button type="button" class="btn btn-danger col-auto" data-bs-toggle="modal" data-bs-target="#cancelModal">Cancel The Appointment</button>
-                </div>
+  <div>
+    <ul class="nav nav-pills nav-justified mb-3">
+      <li class="nav-item">
+        <a class="nav-link" aria-current="page" [class.active]="displayMode == 'upcoming'" (click)="displayMode = 'upcoming'">Upcoming</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [class.active]="displayMode == 'done'" (click)="displayMode = 'done'">Done</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [class.active]="displayMode == 'cancelled'"(click)="displayMode = 'cancelled'">Cancelled</a>
+      </li>
+    </ul>
+  </div>
+
+  <div *ngIf="displayMode == 'upcoming'">
+    <div class="appointment-item p-3 mb-3" *ngFor="let d of data.upcoming">
+      <div class="row">
+        <div class="col-12 col-md-7 row">
+          <div class="col-3">
+            <img src="{{d.thumbnail}}"/>
+          </div>
+          <div class="col-lg-9">
+            <h4 class="border-bottom pb-2">{{d.name}}</h4>
+            <div class="pb-2">
+              {{d.description}}
             </div>
+          </div>
         </div>
-
-        <div *ngIf="displayMode == 'done'">
-            <div class="appointment-item p-3 mb-3" *ngFor="let d of data.done">
-                <div class="row">
-                    <div class="col-12 col-md-7 row">
-                        <div class="col-3">
-                            <img src="{{d.thumbnail}}" />
-                        </div>
-                        <div class="col-lg-9">
-                            <h4 class="border-bottom pb-2">{{d.name}}</h4>
-                            <div class="pb-2">
-                                {{d.description}}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-5">
-                        <div class="row border-bottom pb-2 mb-2">
-                            <b><i class="fa-regular fa-calendar "></i> EXAMINATION SCHEDULES</b>
-                            <div>{{d.date}}</div>
-                        </div>
-                        <div class="row border-bottom pb-2 mb-2">
-                            <b>ADDRESS OF EXAMINATION</b>
-                            <b>{{d.facility}}</b>
-                            <div>{{d.address}}</div>
-                        </div>
-                        <div class="row mb-2">
-                            <b>EXAMINATION PRICE</b>
-                            <div>{{d.price}}</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center border-top pt-3">
-                    <button type="button" class="btn btn-warning col-auto" data-bs-toggle="modal" data-bs-target="#feedbackModal">Give Us Feedback</button>
-                </div>
-            </div>
+        <div class="col-12 col-md-5">
+          <div class="row border-bottom pb-2 mb-2">
+            <b><i class="fa-regular fa-calendar "></i> EXAMINATION SCHEDULES</b>
+            <div>{{d.date}}</div>
+          </div>
+          <div class="row border-bottom pb-2 mb-2">
+            <b>ADDRESS OF EXAMINATION</b>
+            <b>{{d.facility}}</b>
+            <div>{{d.address}}</div>
+          </div>
+          <div class="row mb-2">
+            <b>EXAMINATION PRICE</b>
+            <div>{{d.price}}</div>
+          </div>
         </div>
-
-        <div *ngIf="displayMode == 'cancelled'">
-            <div class="appointment-item p-3 mb-3" *ngFor="let d of data.cancelled">
-                <div class="row">
-                    <div class="col-12 col-md-7 row">
-                        <div class="col-3">
-                            <img src="{{d.thumbnail}}" />
-                        </div>
-                        <div class="col-lg-9">
-                            <h4 class="border-bottom pb-2">{{d.name}}</h4>
-                            <div class="pb-2">
-                                {{d.description}}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-5">
-                        <div class="row border-bottom pb-2 mb-2">
-                            <b><i class="fa-regular fa-calendar "></i> EXAMINATION SCHEDULES</b>
-                            <div>{{d.date}}</div>
-                        </div>
-                        <div class="row border-bottom pb-2 mb-2">
-                            <b>ADDRESS OF EXAMINATION</b>
-                            <b>{{d.facility}}</b>
-                            <div>{{d.address}}</div>
-                        </div>
-                        <div class="row mb-2">
-                            <b>EXAMINATION PRICE</b>
-                            <div>{{d.price}}</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center border-top pt-3">
-                    <button type="button" class="btn btn-secondary col-auto" style="cursor: default">Cancelled</button>
-                </div>
-            </div>
-        </div>
+      </div>
+      <div class="row justify-content-center align-items-center border-top pt-3" >
+        <button type="button" class="btn btn-danger col-auto" data-bs-toggle="modal" data-bs-target="#cancelModal">Cancel The Appointment</button>
+      </div>
     </div>
+  </div>
+
+  <div *ngIf="displayMode == 'done'">
+    <div class="appointment-item p-3 mb-3" *ngFor="let d of data.done">
+      <div class="row">
+        <div class="col-12 col-md-7 row">
+          <div class="col-3">
+            <img src="{{d.thumbnail}}"/>
+          </div>
+          <div class="col-lg-9">
+            <h4 class="border-bottom pb-2">{{d.name}}</h4>
+            <div class="pb-2">
+              {{d.description}}
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-5">
+          <div class="row border-bottom pb-2 mb-2">
+            <b><i class="fa-regular fa-calendar "></i> EXAMINATION SCHEDULES</b>
+            <div>{{d.date}}</div>
+          </div>
+          <div class="row border-bottom pb-2 mb-2">
+            <b>ADDRESS OF EXAMINATION</b>
+            <b>{{d.facility}}</b>
+            <div>{{d.address}}</div>
+          </div>
+          <div class="row mb-2">
+            <b>EXAMINATION PRICE</b>
+            <div>{{d.price}}</div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center border-top pt-3" >
+        <button type="button" class="btn btn-warning col-auto" data-bs-toggle="modal" data-bs-target="#feedbackModal">Give Us Feedback</button>
+      </div>
+    </div>
+  </div>
+
+  <div *ngIf="displayMode == 'cancelled'">
+    <div class="appointment-item p-3 mb-3" *ngFor="let d of data.cancelled" style="position: relative">
+      <div class="row">
+        <div class="col-12 col-md-7 row">
+          <div class="col-3">
+            <img src="{{d.thumbnail}}"/>
+          </div>
+          <div class="col-lg-9">
+            <h4 class="border-bottom pb-2">{{d.name}}</h4>
+            <div class="pb-2">
+              {{d.description}}
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-5">
+          <div class="row border-bottom pb-2 mb-2">
+            <b><i class="fa-regular fa-calendar "></i> EXAMINATION SCHEDULES</b>
+            <div>{{d.date}}</div>
+          </div>
+          <div class="row border-bottom pb-2 mb-2">
+            <b>ADDRESS OF EXAMINATION</b>
+            <b>{{d.facility}}</b>
+            <div>{{d.address}}</div>
+          </div>
+          <div class="row mb-2">
+            <b>EXAMINATION PRICE</b>
+            <div>{{d.price}}</div>
+          </div>
+        </div>
+        <button type="button" class="btn btn-secondary col-auto mr-3" style="cursor: default; position: absolute; right: 0">Cancelled</button>
+      </div>
+
+
+
+    </div>
+  </div>
 </div>
+
 
 
 <!-- Modal for Cancel button-->
 <div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="cancelModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header justify-content-end">
-                <h5 class="modal-title col-12 text-center" id="exampleModalLabel">ARE YOU SURE?</h5>
-            </div>
-            <div class="modal-body">
-                <div class="form-floating">
-                    <textarea class="form-control" placeholder="Reasons" id="floatingTextarea"></textarea>
-                    <label for="floatingTextarea">Reasons (Optional)</label>
-                </div>
-            </div>
-            <div class="modal-footer justify-content-center">
-                <button type="button" class="btn btn-danger">YES</button>
-                <button type="button" class="btn btn-success" data-bs-dismiss="modal">NO</button>
-            </div>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header justify-content-end">
+        <h5 class="modal-title col-12 text-center" id="exampleModalLabel">ARE YOU SURE?</h5>
+<!--        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+      </div>
+      <div class="modal-body">
+        <div class="form-floating">
+          <textarea class="form-control" placeholder="Reasons" id="floatingTextarea"></textarea>
+          <label for="floatingTextarea">Reasons (Optional)</label>
         </div>
+      </div>
+      <div class="modal-footer justify-content-center">
+        <button type="button" class="btn btn-danger" (click)="alertCancel()">YES</button>
+        <button type="button" class="btn btn-success" data-bs-dismiss="modal">NO</button>
+      </div>
     </div>
+  </div>
 </div>
 
 <!-- Modal for Feedback button-->
 <div class="modal fade" id="feedbackModal" tabindex="-1" aria-labelledby="feedbackModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title col-12 text-center" id="exampleModalLabel1">Your Feedback</h5>
-            </div>
-            <div class="modal-body">
-                <div class="form-floating">
-                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-                    <label for="floatingTextarea2">Comments</label>
-                </div>
-            </div>
-            <div class="modal-footer justify-content-center">
-                <button type="button" class="btn btn-warning">Send</button>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title col-12 text-center" id="exampleModalLabel1">Your Feedback</h5>
+<!--        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+      </div>
+      <div class="modal-body">
+        <div class="rate d-flex flex-row-reverse justify-content-center" style="height: 100%;">
+          <input type="radio" id="star5" name="rate" value="5" />
+          <label for="star5" title="text">5 sao</label>
+          <input type="radio" id="star4" name="rate" value="4" />
+          <label for="star4" title="text">4 sao</label>
+          <input type="radio" id="star3" name="rate" value="3" />
+          <label for="star3" title="text">3 sao</label>
+          <input type="radio" id="star2" name="rate" value="2" />
+          <label for="star2" title="text">2 sao</label>
+          <input type="radio" id="star1" name="rate" value="1" />
+          <label for="star1" title="text">1 sao</label>
         </div>
+        <div class="form-floating">
+          <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+          <label for="floatingTextarea2">Comments</label>
+        </div>
+      </div>
+      <div class="modal-footer justify-content-center">
+        <button type="button" class="btn btn-warning" (click)="alertFeedback()">Send</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
     </div>
+  </div>
 </div>
