--- a/src/app/components/appointment-details/appointment-details.component.scss
+++ b/src/app/components/appointment-details/appointment-details.component.scss
@@ -1,43 +1,76 @@
-* {
-    box-sizing: border-box;
+*{
+  box-sizing: border-box;
 }
-
-.appointment-item h4 {
-    color: rgb(2, 139, 180);
+.background{
+  background-color: #efefef;
 }
-
-.nav {
-    background-color: #ffffff;
-    border-radius: 0.375rem;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
+.appointment-item h4{
+  color: rgb(2, 139, 180);
 }
-
-.appointment-item {
-    background-color: #ffffff;
-    border-radius: 0.5rem;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+.nav{
+  background-color: #ffffff;
+  border-radius: 0.375rem;
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.2);
 }
+.appointment-item{
 
+  background-color: #ffffff;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.3);
+}
 img {
-    border-radius: 50%;
-    width: 100%;
-    height: auto;
+  border-radius: 50%;
+  width: 100%;
+  height: auto;
 }
-
-a {
-    color: black;
-    cursor: pointer;
+a{
+  color: black;
+  cursor: pointer;
 }
-
 a:hover {
-    color: rgb(2, 139, 180);
-    background-color: #eeeeee;
+  color: rgb(2, 139, 180);
+  background-color: #eeeeee;
 }
-
 .nav-pills .active {
-    background-color: rgb(2, 139, 180);
+  background-color: rgb(2, 139, 180);
+  }
+// Rating
+.rate {
+  height: 46px;
+  text-align: center !important;
 }
 
-// .modal-content {
-//     margin-top: calc(50vh - 226px);
-// }
+.rate:not(:checked)>input {
+  position: absolute;
+  top: -9999px;
+}
+
+.rate:not(:checked)>label {
+  width: 1em;
+  overflow: hidden;
+  white-space: nowrap;
+  cursor: pointer;
+  font-size: 50px;
+  color: #ccc;
+}
+
+.rate:not(:checked)>label:before {
+  content: "★ ";
+}
+
+.rate>input:checked~label {
+  color: #ffc700;
+}
+
+.rate:not(:checked)>label:hover,
+.rate:not(:checked)>label:hover~label {
+  color: #deb217;
+}
+
+.rate>input:checked+label:hover,
+.rate>input:checked+label:hover~label,
+.rate>input:checked~label:hover,
+.rate>input:checked~label:hover~label,
+.rate>label:hover~input:checked~label {
+  color: #c59b08;
+}
