--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="content-down d-flex justify-content-center">
             <ul class="options row d-flex justify-content-center container">
-                <li class="row d-flex justify-content-center col-lg col-md-4 col-4" *ngFor="let item of home.homeBanner">
+                <li class="row d-flex justify-content-center col-lg col-md-4 col-4" *ngFor="let item of slideShow.homeBanner">
                     <i class="{{item.icon}}"></i>
                     <span>
                       {{item.option}}
@@ -28,13 +28,13 @@
 </div>
 <div class="container py-5">
     <owl-carousel-o [options]="slide">
-        <ng-template carouselSlide *ngFor="let item of home.homeSlide1">
+        <ng-template carouselSlide *ngFor="let item of slideShow.homeSlide1">
             <div class="slide pr-2">
                 <a routerLink="">
                     <img src="{{item.image}}">
                     <h5><b class="text-dark">{{item.title}}</b></h5>
-                    <div class="row" *ngFor="let item2 of item.description">
-                        <span class="text-dark">- {{item2.des}}</span>
+                    <div *ngFor="let item2 of item.description">
+                        <p class="text-dark">- {{item2.des}}</p>
                     </div>
                 </a>
             </div>
@@ -45,7 +45,7 @@
     <div class="container py-5">
         <h3>Remote consultation via video</h3>
         <owl-carousel-o [options]="staticSlide">
-            <ng-template carouselSlide *ngFor="let item of home.homeSlide2">
+            <ng-template carouselSlide *ngFor="let item of slideShow.homeSlide2">
                 <div class="slide pr-2">
                     <a routerLink="">
                         <i class="fa-regular fa-video"></i>
@@ -61,7 +61,7 @@
     <div class="container py-5">
         <h3>Popular specialties</h3>
         <owl-carousel-o [options]="staticSlide">
-            <ng-template carouselSlide *ngFor="let item of home.homeSlide3">
+            <ng-template carouselSlide *ngFor="let item of home.specialist">
                 <div class="slide pr-2">
                     <a routerLink="">
                         <img src="{{item.image}}">
@@ -76,7 +76,7 @@
     <div class="container py-5">
         <h3>Outstanding medical facility</h3>
         <owl-carousel-o [options]="staticSlide">
-            <ng-template carouselSlide *ngFor="let item of home.homeSlide4">
+            <ng-template carouselSlide *ngFor="let item of home.clinics">
                 <div class="slide pr-2">
                     <a routerLink="">
                         <img src="{{item.image}}">
@@ -90,13 +90,13 @@
 <div class="container py-5 doctor">
     <h3>Outstanding Doctor</h3>
     <owl-carousel-o [options]="staticSlide">
-        <ng-template carouselSlide *ngFor="let item of home.homeSlide5">
+        <ng-template carouselSlide *ngFor="let item of home.doctor">
             <div class="slide">
                 <a routerLink="appointments" class="d-flex justify-content-center row">
                     <div class="doc-img row text-center d-flex justify-content-center">
                         <img src="{{item.image}}" class="p-2">
                         <h6><span class="text-dark">{{item.title}}</span></h6>
-                        <span class="text-dark">{{item.des}}</span>
+                        <span class="text-dark">{{item.desc}}</span>
                     </div>
                 </a>
             </div>
