--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -28,6 +28,8 @@
                         <li><a routerLink='/contact' data-bs-dismiss="offcanvas">Contact</a></li>
                         <li><a routerLink="/question" data-bs-dismiss="offcanvas">Frequently asked questions</a></li>
                         <li><a routerLink="#" data-bs-dismiss="offcanvas">Terms of use</a></li>
+                        <li><a routerLink="/prescription" data-bs-dismiss="offcanvas">Prescription</a></li>
+                        <li><a routerLink="/bmi" data-bs-dismiss="offcanvas">bmi</a></li>
                         <li><a routerLink="#" data-bs-dismiss="offcanvas">Complaint handling process</a></li>
                         <li><a routerLink="#" data-bs-dismiss="offcanvas">Operating regulations</a></li>
                     </ul>
