--- a/src/app/components/prescription/prescription.component.html
+++ b/src/app/components/prescription/prescription.component.html
@@ -1,1 +1,126 @@
-<p>prescription works!</p>
+<div class="container">
+    <form method="post" (submit)="submit()">
+        <div class="row flex-column">
+            <div class="col-6">
+                <div class="col-4 ">
+                    <label for="" class="form-label">Họ tên</label>
+                    <input id="startDate" class="form-control" type="text" placeholder="Họ và Tên người sử dụng" />
+                    <!-- <span *ngIf="fullname">vui long nhap ho ten</span> -->
+                </div> <br>
+                <div class="col-3">
+                    <label for="" class="form-label">Thanh pho</label>
+                    <select class="form-control form-control-sm|form-control-lg" required name="" id="" (change)="changeCity($event.target)">
+    <option *ngFor="let i of city; let j=index" value="{{j}}">{{i.name}}</option>
+  </select>
+                </div>
+                <div class=" col-3">
+                    <label for="" class="form-label">Quan Huyen</label>
+                    <select class="form-control form-control-sm|form-control-lg" required name="" id="" (change)="changedistrict($event.target)">
+    <option *ngFor="let i of district; let j=index" value="{{j}}">{{i.name}}</option>
+  </select>
+                </div>
+                <div class="col-3">
+                    <label for="" class="form-label">Phuong Xa</label>
+                    <select class="form-control form-control-sm|form-control-lg" required name="" id="">
+          <option *ngFor="let i of wards; let j=index" value="{{j}}">{{i.name}}</option>
+        </select>
+                </div>
+                <div class="col-4">
+                    <label for="" class="form-label">Cơ Sở KCB</label>
+                    <select class="form-control form-control-sm|form-control-lg" required name="" id="">
+          <option *ngFor="let i of medicalfacility">{{i}}</option>
+        </select>
+                </div>
+                <div class="col-4">
+                    <label for="" class="form-label">Tu Ngay</label>
+                    <input id="startDate" class="form-control" type="date" required/>
+                    <!-- <span id="startDateSelected">Chọn ngày :</span> -->
+                </div>
+                <div class="col-4">
+                    <label for="" class="form-label">Den Ngay</label>
+                    <input id="startDate" class="form-control" type="date" required/>
+                    <!-- <span id="startDateSelected">Chọn ngày :</span> -->
+                </div>
+            </div>
+            <div class="col"></div>
+        </div>
+        <button type="submit" class=" btn bg-primary">Submit2</button>
+    </form>
+
+    <hr>
+
+    <div>
+        <div class="row">
+            <div class="col-3">
+                <label for="" class="form-label">Tên thuốc</label>
+                <input required class="form-control" type="text" placeholder="Nhập tên thuốc" (focus)="mdcName()" [value]="medicineName1">
+                <div *ngIf="show">
+                    <ul class="medicineName">
+                        <li class="mdcName" type="botton" *ngFor="let i of medicineName" (click)="mdcNamePick(i.name)">{{i.name}}</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-2">
+                <label for="" class="form-label">Số lượng</label>
+                <input required class="form-control" type="number" placeholder="Số lượng" />
+            </div>
+            <div class="col-2 form-check">
+                <label for="" class="form-label">Đối Tượng</label><br>
+                <input required type="checkbox" name="object" value="Người Lớn" #checks [checked]="checkbox" class="form-check-input" (change)="checkk(checks.checked)" /><span>Người Lớn</span><br>
+                <input required class="form-check-input" name="object" type="checkbox" #checks2 [checked]="!checkbox" (change)="checkk(!checks2.checked)" value="Trẻ Nhỏ" /><span>Trẻ Nhỏ</span>
+            </div>
+            <div class="col">
+                <label for="" class="form-label">Lưu ý</label><br>
+                <textarea name="note" id="" cols="50" rows="3"></textarea>
+            </div>
+        </div>
+        <button type="button" (click)="submitMDC()" class=" btn bg-success">Submit2</button>
+    </div>
+    <hr>
+    <table #table1 class="border-1">
+        <thead class="">
+            <tr>
+                <th>stt</th>
+                <th>Tên Thuốc</th>
+                <th>Số lượng</th>
+                <th>Cách dùng</th>
+                <th>Lưu ý</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td scope="row">1</td>
+                <td>Tên Thuốc</td>
+                <td>Số lượng</td>
+                <td>Cách dùng</td>
+                <td>luu y</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<style>
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    td,
+    th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
+
+    .medicineName {
+        list-style: none;
+    }
+
+    .mdcName {
+        margin: 2px;
+    }
+
+    .mdcName:hover {
+        background: rgb(206, 206, 206);
+    }
+</style>
