--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -81,6 +81,7 @@ li {
         li {
             border-bottom: 1px #eee solid;
             padding: 10px 15px;
+            cursor: pointer;
             a {
                 color: #3498db;
             }
