--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,9 +15,11 @@
                 <div class="offcanvas-body">
                     <ul>
                         <li><a routerLink="" data-bs-dismiss="offcanvas">Home page</a></li>
-                        <li><a routerLink="#" data-bs-dismiss="offcanvas">Handbook</a></li>
-                        <li><a routerLink="#" data-bs-dismiss="offcanvas">Cooperation contact</a></li>
-                        <li><a routerLink="#" data-bs-dismiss="offcanvas">Recruit</a></li>
+                        <li data-bs-toggle="offcanvas" data-bs-target="#specialist"><a>Medical specialist</a></li>
+                        <li data-bs-toggle="offcanvas" data-bs-target="#facilities"><a>Health facilities</a></li>
+                        <li data-bs-toggle="offcanvas" data-bs-target="#doctors"><a>Doctor</a></li>
+                        <li><a routerLink="/prescription" data-bs-dismiss="offcanvas">Prescription</a></li>
+                        <li><a routerLink="/bmi" data-bs-dismiss="offcanvas">BMI</a></li>
                     </ul>
                     <div class="about">
                         <b class="about-us">About us</b>
@@ -28,8 +30,6 @@
                         <li><a routerLink='/contact' data-bs-dismiss="offcanvas">Contact</a></li>
                         <li><a routerLink="/question" data-bs-dismiss="offcanvas">Frequently asked questions</a></li>
                         <li><a routerLink="#" data-bs-dismiss="offcanvas">Terms of use</a></li>
-                        <li><a routerLink="/prescription" data-bs-dismiss="offcanvas">Prescription</a></li>
-                        <li><a routerLink="/bmi" data-bs-dismiss="offcanvas">bmi</a></li>
                         <li><a routerLink="#" data-bs-dismiss="offcanvas">Complaint handling process</a></li>
                         <li><a routerLink="#" data-bs-dismiss="offcanvas">Operating regulations</a></li>
                     </ul>
