--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="content-down d-flex justify-content-center">
             <ul class="options row d-flex justify-content-center container">
-                <li class="row d-flex justify-content-center col-lg col-md-4 col-4" *ngFor="let item of slideShow.homeBanner">
+                <li class="row d-flex justify-content-center col-lg col-md-4 col-4" *ngFor="let item of home.homeBanner">
                     <i class="{{item.icon}}"></i>
                     <span>
                       {{item.option}}
@@ -28,7 +28,7 @@
 </div>
 <div class="container py-5">
     <owl-carousel-o [options]="slide">
-        <ng-template carouselSlide *ngFor="let item of slideShow.homeSlide1">
+        <ng-template carouselSlide *ngFor="let item of home.homeSlide1">
             <div class="slide pr-2">
                 <a routerLink="">
                     <img src="{{item.image}}">
@@ -41,11 +41,11 @@
         </ng-template>
     </owl-carousel-o>
 </div>
-<div class="medical-online">
+<div class="grey-row medical-online">
     <div class="container py-5">
         <h3>Remote consultation via video</h3>
         <owl-carousel-o [options]="staticSlide">
-            <ng-template carouselSlide *ngFor="let item of slideShow.homeSlide2">
+            <ng-template carouselSlide *ngFor="let item of home.homeSlide2">
                 <div class="slide pr-2">
                     <a routerLink="">
                         <i class="fa-regular fa-video"></i>
@@ -57,26 +57,24 @@
         </owl-carousel-o>
     </div>
 </div>
-<div class="specialist">
-    <div class="container py-5">
-        <h3>Popular specialties</h3>
-        <owl-carousel-o [options]="staticSlide">
-            <ng-template carouselSlide *ngFor="let item of home.specialist">
-                <div class="slide pr-2">
-                    <a routerLink="">
-                        <img src="{{item.image}}">
-                        <h5><span class="text-dark">{{item.title}}</span></h5>
-                    </a>
-                </div>
-            </ng-template>
-        </owl-carousel-o>
-    </div>
+<div class="container py-5">
+    <h3>Popular specialties</h3>
+    <owl-carousel-o [options]="staticSlide">
+        <ng-template carouselSlide *ngFor="let item of dataForAll.specialist">
+            <div class="slide pr-2">
+                <a routerLink="">
+                    <img src="{{item.image}}">
+                    <h5><span class="text-dark">{{item.title}}</span></h5>
+                </a>
+            </div>
+        </ng-template>
+    </owl-carousel-o>
 </div>
-<div class="outstanding-medical-facility">
+<div class="grey-row">
     <div class="container py-5">
         <h3>Outstanding medical facility</h3>
         <owl-carousel-o [options]="staticSlide">
-            <ng-template carouselSlide *ngFor="let item of home.clinics">
+            <ng-template carouselSlide *ngFor="let item of dataForAll.clinics">
                 <div class="slide pr-2">
                     <a routerLink="">
                         <img src="{{item.image}}">
@@ -90,16 +88,34 @@
 <div class="container py-5 doctor">
     <h3>Outstanding Doctor</h3>
     <owl-carousel-o [options]="staticSlide">
-        <ng-template carouselSlide *ngFor="let item of home.doctor">
+        <ng-template carouselSlide *ngFor="let item of dataForAll.doctor">
             <div class="slide">
                 <a routerLink="appointments" class="d-flex justify-content-center row">
                     <div class="doc-img row text-center d-flex justify-content-center">
                         <img src="{{item.image}}" class="p-2">
-                        <h6><span class="text-dark">{{item.title}}</span></h6>
-                        <span class="text-dark">{{item.desc}}</span>
+                        <h6><b class="text-dark">{{item.title}}</b></h6>
+                        <span class="text-dark">{{item.subTitle}}</span>
                     </div>
                 </a>
             </div>
         </ng-template>
     </owl-carousel-o>
+</div>
+<div class="grey-row py-1">
+    <div class="container">
+        <h3 class="text-center">Health handbook</h3>
+        <div class="row py-5">
+            <a routerLink="{{item.link}}" class="col-6 row" *ngFor="let item of home.handbook">
+                <img src="{{item.image}}" alt="">
+                <h4>
+                    <p class="text-dark">
+                        {{item.title}}
+                    </p>
+                </h4>
+                <p class="text-muted">
+                    {{item.subtitle}}
+                </p>
+            </a>
+        </div>
+    </div>
 </div>
