--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -132,7 +132,6 @@ a {
 }
 
 .medical-online {
-    background-color: #f5f5f5;
     width: 100vw;
     a {
         i {
@@ -153,7 +152,7 @@ a {
     }
 }
 
-.outstanding-medical-facility {
+.grey-row {
     background-color: #f5f5f5;
     width: 100vw;
 }
