--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <router-outlet (activate)="onActivate($event)"></router-outlet>
 <app-footer></app-footer>
+<app-pop-up-chat></app-pop-up-chat>
