--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -36,30 +36,24 @@
                 </div>
             </div>
         </div>
-        <div class="center-content justify-content-between align-items-center d-none d-md-none d-lg-flex col-lg-7">
-            <div class="child-content px-1" data-bs-toggle="offcanvas" data-bs-target="#specialist">
+        <div class="center-content justify-content-center align-items-center d-none d-md-none d-lg-flex col-lg-7">
+            <div class="child-content px-3" data-bs-toggle="offcanvas" data-bs-target="#specialist">
                 <div>
                     <b>Medical specialist</b>
                 </div>
                 <div class="sub-title">Find a doctor by specialty</div>
             </div>
-            <div class="child-content px-1" data-bs-toggle="offcanvas" data-bs-target="#facilities">
+            <div class="child-content px-3" data-bs-toggle="offcanvas" data-bs-target="#facilities">
                 <div>
                     <b>Health facilities</b>
                 </div>
                 <div class="sub-title">Choose hospital, clinic</div>
             </div>
-            <div class="child-content px-1" data-bs-toggle="offcanvas" data-bs-target="#doctors">
+            <div class="child-content px-3" data-bs-toggle="offcanvas" data-bs-target="#doctors">
                 <div>
                     <b>Doctor</b>
                 </div>
                 <div class="sub-title">Choose a good doctor</div>
-            </div>
-            <div class="child-content px-1" data-bs-toggle="offcanvas" data-bs-target="#">
-                <div>
-                    <b>Check-up package</b>
-                </div>
-                <div class="sub-title">General health check</div>
             </div>
         </div>
         <div class="right-content d-flex justify-content-end align-items-center col-6 col-md-6 col-lg-2">
