--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -175,3 +175,44 @@ a {
         }
     }
 }
+
+.card {
+    padding: 40px 0;
+    transition: all 0.3s ease-in-out;
+    box-shadow: unset;
+    margin-bottom: 15px;
+    border: 1px solid #dfe3eb;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: initial;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
+    height: 266px;
+    img {
+        width: 80px;
+        height: 80px;
+        display: inline-block;
+        margin: 0 auto;
+    }
+    .text-support {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 30px;
+        margin: 5px 0;
+    }
+}
+
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
