--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@ a {
 
 header {
     width: 100vw !important;
-    background: linear-gradient( 135deg, rgb(78, 235, 247) 0%, rgb(159, 247, 235) 100%);
+    background: linear-gradient( 135deg, rgb(253, 255, 255) 0%, rgb(245, 116, 116) 100%);
 }
 
 ul,
@@ -50,7 +50,7 @@ li {
                 width: fit-content;
                 position: relative;
                 img {
-                    height: 70px;
+                    height: 50px;
                     width: auto;
                 }
             }
@@ -63,7 +63,14 @@ li {
                 padding-right: 5px;
             }
             .userLogin {
+                span {
+                    cursor: pointer;
+                }
                 padding-left: 15px;
+                .vertical-line {
+                    border-right: 1px solid rgb(255, 255, 255);
+                    height: 0.8125rem;
+                }
             }
         }
     }
@@ -112,4 +119,66 @@ li {
 .back {
     border: none;
     font-size: 30px;
+}
+
+.login-background {
+    background-image: url("../../../assets/images/login-bg.jpg");
+    height: 100vh;
+    .login-container {
+        width: 400px;
+        height: auto;
+        border-radius: 20px;
+        margin: 0 auto;
+        background: white;
+        background: linear-gradient( 135deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+        a {
+            text-decoration: none;
+        }
+        input {
+            border-radius: 50px;
+        }
+        .login-input {
+            padding: 5px 10px;
+            label {
+                margin: 0 !important;
+            }
+            .btn {
+                width: 100%;
+                height: 30px;
+                border-radius: 30px;
+                color: white;
+            }
+            .input-password {
+                position: relative;
+                .show-password {
+                    position: absolute;
+                    right: 10px;
+                    top: 10px;
+                    cursor: pointer;
+                }
+            }
+        }
+        .forgot-password {
+            font-size: 12px;
+        }
+        .social-login {
+            display: flex;
+            justify-content: center;
+            a {
+                i {
+                    font-size: 35px;
+                    margin: 0 5px;
+                }
+                .fa-facebook {
+                    color: blue;
+                }
+                .fa-google-plus {
+                    color: red;
+                }
+                .fa-twitter {
+                    color: rgb(44, 89, 236);
+                }
+            }
+        }
+    }
 }
