--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,56 +1,96 @@
-footer {
-    overflow-x: hidden !important;
-    width: 100% !important;
-}
+// footer {
+//     overflow-x: hidden !important;
+//     width: 100% !important;
+// }
 
-.footer-basic {
-    background: #eee;
-    font-size: 15px;
-}
+// .footer-basic {
+//     background: #eee;
+//     font-size: 15px;
+// }
 
-.logo {
-    width: auto;
-    height: 70px;
-}
+// .logo {
+//     width: auto;
+//     height: 70px;
+// }
 
-.first {
-    line-height: 2;
-    .bct {
-        width: 120px;
-        height: auto;
+// .first {
+//     line-height: 2;
+//     .bct {
+//         width: 120px;
+//         height: auto;
+//     }
+// }
+
+// .center {
+//     line-height: 1.5;
+//     font-size: 20px;
+//     padding-left: 30px;
+//     a {
+//         text-decoration: none;
+//         color: #3498db;
+//     }
+// }
+
+// .last {
+//     padding-left: 0;
+//     line-height: 2;
+//     font-size: 18px;
+// }
+
+// .social-network {
+//     padding: 10px 0 0 40px;
+//     a {
+//         padding-left: 20px;
+//         i {
+//             font-size: 50px;
+//         }
+//     }
+// }
+
+// .copyright {
+//     text-align: center;
+//     height: 60px;
+//     font-size: 20px;
+//     opacity: 0.5;
+//     width: 100vw;
+// }
+
+
+
+// .footer-basic {
+//     background: #eee;
+//     // font-size: 15px;
+// }
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+.footer-basic{
+    background-color: #F8FAFD;
+    line-height: 15px;
+    padding-top: 20px;
+    width: 100vw!important;
+    .logo{
+        width: auto;
+        height: 90px;
+        float: right;
+        margin-top: 10px;
+    }
+    h5{
+        color: blue;
+    }
+    .btn{
+        width: auto;
+        height: 50px;
+    }
+    .btn-top{
+        width: auto;
+        height: 50px;
+        margin-left: 3px;
+    }
+    .img-footer-content{
+        display: flex;
     }
 }
-
-.center {
-    line-height: 1.5;
-    font-size: 20px;
-    padding-left: 30px;
-    a {
-        text-decoration: none;
-        color: #3498db;
-    }
-}
-
-.last {
-    padding-left: 0;
-    line-height: 2;
-    font-size: 18px;
-}
-
-.social-network {
-    padding: 10px 0 0 40px;
-    a {
-        padding-left: 20px;
-        i {
-            font-size: 50px;
-        }
-    }
-}
-
-.copyright {
+.copyright{
+    background-color: rgb(75, 75, 245);
     text-align: center;
-    height: 60px;
-    font-size: 20px;
-    opacity: 0.5;
-    width: 100vw;
+    height: 20px;
 }
