--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -32,6 +32,7 @@
                 <p><i class="fa-solid fa-circle-envelope"></i> heathycare@gmail.com</p>
                 <p><i class="fa-solid fa-circle-phone"></i> 01234456789</p>
                 <p><i class="fa-brands fa-facebook"></i> Heathycare/facebook.com</p>
+                <p><i class="bi bi-geo-alt-fill"></i> No.8 Ton That Thuyet,My Dinh,Cau Giay,Ha Noi</p>
             </div>
             <p><i class="fa-solid fa-bell-exclamation"></i> Please send information, we will contact you as soon as possible.</p>
         </div>
